--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy cicd-gha-sa to cloud run
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 env:
   PROJECT_ID: ${{ vars.PROJECT_ID }}
